Heroku email address fix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,4 +55,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "csat-exercise-hosne" #Must be unique in Heroku
-          heroku_email: hoquesmail2@gmail.com"
+          heroku_email: hoquesmail2@gmail.com
